--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hacker site</title>
+    <title>Hacker begining time</title>
 </head>
 <body>
-    <title>Welcome</title>
-    <h1 style="background-color:DodgerBlue;">DodgerBlue</h1>
+
 </body>
 </html>
