--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Coaching Times</h1>
     <img
-    src="https://theglobalgaming.com/images/thumbnails/_950x562_crop_center-center_75_none/61805/62059ddf9bff1923c90090c9_fortnite20skins20best20black20white.webp"
+    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUBzMsJkZsasON4AvTUPdsQToLxoRDtGrttykJgIyrXQ&s"
     alt="fortnite bp"
     height="-200"
     width="">
