--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     height="-200"
     width="">
     <h2>I'm The Coach Here.
+    <h1>So tell me how much time would you like on lessons</h1>
+    <button> 1 hour</button>
+    <button>45 minutes</button>
+    <button>30 miutes</button>
+    <button>20 minutes</button>
+    <button>15 minutes</button>
+    <button>10 minutes</button>
+    <h2> select one from up here</h2>
 
     </h2>
 </body>
