--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <button>15 minutes</button>
     <button>10 minutes</button>
     <h2> select one from up here</h2>
-
+    <h2> Choose the one that suits you best</h2>
 </body>
 </html>
