--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     <h2> select one from up here</h2>
     <h2> Choose the one that suits you best</h2>
     <img
-    src="https://media-exp1.licdn.com/dms/image/C5103AQHKlQY2iG-R-g/profile-displayphoto-shrink_800_800/0/1517054473835?e=2147483647&v=beta&t=zwTjf5djAFPL9ZHGOIUe6VqX6KsJmyhKY7E0HksnY2w"
+    src="https://www.youtube.com/watch?v=L-5NTMuy0cU"
     alt="fortnite bp"
     height="-200"
-    width="">  
+    width="">
+       
 </body>
 </html>
