--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Coaching Times</h1>
     <img
     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUBzMsJkZsasON4AvTUPdsQToLxoRDtGrttykJgIyrXQ&s"
-    alt="fortnite bp"
+    alt=""
     height="-200"
     width="">
     <h2>I'm The Coach Here.
@@ -23,11 +23,6 @@
     <button>10 minutes</button>
     <h2> select one from up here</h2>
     <h2> Choose the one that suits you best</h2>
-    <img
-    src="https://www.youtube.com/watch?v=L-5NTMuy0cU"
-    alt="fortnite bp"
-    height="-200"
-    width="">
-       
+    
 </body>
 </html>
